k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: resilience-demo
spec:
  replicas: 3
 
  selector:
    matchLabels:
      app: sample-app
 
  template:
    metadata:
      labels:
        app: sample-app
 
    spec:
      containers:
      - name: sample-app
 
        image: phani201983/sample-app:1.0
 
        imagePullPolicy: IfNotPresent
 
        ports:
        - containerPort: 5000
 
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
 
          limits:
            cpu: "500m"
            memory: "512Mi"
 
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
 
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
