k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-demo-app-service
  namespace: resilience
 
spec:
  selector:
    app: sample-demo-app
 
  ports:
  - port: 80
    targetPort: 5000
 
  type: NodePort
