k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
 
metadata:
  name: sample-demo-app-ingress
  namespace: resilience
 
spec:
  rules:
  - host: sample-demo-app.local
 
    http:
      paths:
      - path: /
        pathType: Prefix
 
        backend:
          service:
            name: sample-demo-app-service
 
            port:
              number: 80
